# 5G_LMF

./: LICENSE  README.md
oai-cn5g-fed/component/oai-amf/amf-server/: CMakeLists.txt  amf_server.cc  compile.sh
oai-cn5g-fed/component/oai-ausf/src/5gaka/: CMakeLists.txt  authentication_algorithms_with_5gaka.cpp  authentication_algorithms_with_5gaka.hpp  rijndael.cpp  sha256.cpp  sha256.hpp
oai-cn5g-fed/component/oai-nssf/src/api-server/: CMakeLists.txt  README.md  nssf-api-server.cpp  nssf-api-server.h  nssf-http2-server.cpp  nssf-http2-server.h
oai-cn5g-fed/component/oai-nssf/src/api-server/api/: NFInstanceIDDocumentApi.cpp  NFInstanceIDDocumentApi.h  NSSAIAvailabilityStoreApi.cpp  NSSAIAvailabilityStoreApi.h  NetworkSliceInformationDocumentApi.cpp  NetworkSliceInformationDocumentApi.h  NssfSliceConfigApi.cpp  NssfSliceConfigApi.h  SubscriptionIDDocumentApi.cpp  SubscriptionIDDocumentApi.h  SubscriptionsCollectionApi.cpp  SubscriptionsCollectionApi.h
oai-cn5g-fed/component/oai-nssf/src/api-server/impl/: NFInstanceIDDocumentApiImpl.cpp  NFInstanceIDDocumentApiImpl.h  NSSAIAvailabilityStoreApiImpl.cpp  NSSAIAvailabilityStoreApiImpl.h  NetworkSliceInformationDocumentApiImpl.cpp  NetworkSliceInformationDocumentApiImpl.h  NssfSliceConfigApiImpl.cpp  NssfSliceConfigApiImpl.h  SubscriptionIDDocumentApiImpl.cpp  SubscriptionIDDocumentApiImpl.h  SubscriptionsCollectionApiImpl.cpp  SubscriptionsCollectionApiImpl.h
oai-cn5g-fed/component/oai-nssf/src/api-server/model/: AccessTokenErr.cpp  AccessTokenErr.h  AccessTokenReq.cpp  AccessTokenReq.h  AccessType.cpp  AccessType.h  AllowedNssai.cpp  AllowedNssai.h  AllowedSnssai.cpp  AllowedSnssai.h  Atom.cpp  Atom.h  AtsssCapability.cpp  AtsssCapability.h  AuthorizedNetworkSliceInfo.cpp  AuthorizedNetworkSliceInfo.h  AuthorizedNssaiAvailabilityData.cpp  AuthorizedNssaiAvailabilityData.h  AuthorizedNssaiAvailabilityInfo.cpp  AuthorizedNssaiAvailabilityInfo.h  Cnf.cpp  Cnf.h  CnfUnit.cpp  CnfUnit.h  ComplexQuery.cpp  ComplexQuery.h  ConfiguredSnssai.cpp  ConfiguredSnssai.h  DataSetId.cpp  DataSetId.h  Dnf.cpp  Dnf.h  DnfUnit.cpp  DnfUnit.h  EventId.cpp  EventId.h  ExtSnssai.cpp  ExtSnssai.h  Guami.cpp  Guami.h  (+76 more)
oai-cn5g-fed/component/oai-udm/src/api_server/: CMakeLists.txt  udm-api-server.cpp  udm-api-server.h  udm-http2-server.cpp  udm-http2-server.h
oai-cn5g-fed/component/oai-udm/src/api_server/api/: AMF3GppAccessRegistrationInfoRetrievalApi.cpp  AMF3GppAccessRegistrationInfoRetrievalApi.h  AMFNon3GPPAccessRegistrationInfoRetrievalApi.cpp  AMFNon3GPPAccessRegistrationInfoRetrievalApi.h  AMFRegistrationFor3GPPAccessApi.cpp  AMFRegistrationFor3GPPAccessApi.h  AMFRegistrationForNon3GPPAccessApi.cpp  AMFRegistrationForNon3GPPAccessApi.h  AccessAndMobilitySubscriptionDataRetrievalApi.cpp  AccessAndMobilitySubscriptionDataRetrievalApi.h  ConfirmAuthApi.cpp  ConfirmAuthApi.h  CreateEESubscriptionApi.cpp  CreateEESubscriptionApi.h  DeleteAuthApi.cpp  DeleteAuthApi.h  DeleteEESubscriptionApi.cpp  DeleteEESubscriptionApi.h  GPSIToSUPITranslationApi.cpp  GPSIToSUPITranslationApi.h  GenerateAuthDataApi.cpp  GenerateAuthDataApi.h  GroupIdentifiersApi.cpp  GroupIdentifiersApi.h  IPSMGWDeregistrationApi.cpp  IPSMGWDeregistrationApi.h  IPSMGWRegistrationApi.cpp  IPSMGWRegistrationApi.h  IPSMGWRegistrationInfoRetrievalApi.cpp  IPSMGWRegistrationInfoRetrievalApi.h  PEIUpdateApi.cpp  PEIUpdateApi.h  ParameterUpdateInTheAMFRegistrationFor3GPPAccessApi.cpp  ParameterUpdateInTheAMFRegistrationFor3GPPAccessApi.h  ParameterUpdateInTheAMFRegistrationForNon3GPPAccessApi.cpp  ParameterUpdateInTheAMFRegistrationForNon3GPPAccessApi.h  ProvidingAcknowledgementOfSteeringOfRoamingApi.cpp  ProvidingAcknowledgementOfSteeringOfRoamingApi.h  ProvidingAcknowledgementOfUEParametersUpdateApi.cpp  ProvidingAcknowledgementOfUEParametersUpdateApi.h  (+58 more)
oai-cn5g-fed/component/oai-udm/src/api_server/impl/: AMF3GppAccessRegistrationInfoRetrievalApiImpl.cpp  AMF3GppAccessRegistrationInfoRetrievalApiImpl.h  AMFNon3GPPAccessRegistrationInfoRetrievalApiImpl.cpp  AMFNon3GPPAccessRegistrationInfoRetrievalApiImpl.h  AMFRegistrationFor3GPPAccessApiImpl.cpp  AMFRegistrationFor3GPPAccessApiImpl.h  AMFRegistrationForNon3GPPAccessApiImpl.cpp  AMFRegistrationForNon3GPPAccessApiImpl.h  AccessAndMobilitySubscriptionDataRetrievalApiImpl.cpp  AccessAndMobilitySubscriptionDataRetrievalApiImpl.h  ConfirmAuthApiImpl.cpp  ConfirmAuthApiImpl.h  CreateEESubscriptionApiImpl.cpp  CreateEESubscriptionApiImpl.h  DeleteAuthApiImpl.cpp  DeleteAuthApiImpl.h  DeleteEESubscriptionApiImpl.cpp  DeleteEESubscriptionApiImpl.h  GPSIToSUPITranslationApiImpl.cpp  GPSIToSUPITranslationApiImpl.h  GenerateAuthDataApiImpl.cpp  GenerateAuthDataApiImpl.h  GroupIdentifiersApiImpl.cpp  GroupIdentifiersApiImpl.h  IPSMGWDeregistrationApiImpl.cpp  IPSMGWDeregistrationApiImpl.h  IPSMGWRegistrationApiImpl.cpp  IPSMGWRegistrationApiImpl.h  IPSMGWRegistrationInfoRetrievalApiImpl.cpp  IPSMGWRegistrationInfoRetrievalApiImpl.h  PEIUpdateApiImpl.cpp  PEIUpdateApiImpl.h  ParameterUpdateInTheAMFRegistrationFor3GPPAccessApiImpl.cpp  ParameterUpdateInTheAMFRegistrationFor3GPPAccessApiImpl.h  ParameterUpdateInTheAMFRegistrationForNon3GPPAccessApiImpl.cpp  ParameterUpdateInTheAMFRegistrationForNon3GPPAccessApiImpl.h  ProvidingAcknowledgementOfSteeringOfRoamingApiImpl.cpp  ProvidingAcknowledgementOfSteeringOfRoamingApiImpl.h  ProvidingAcknowledgementOfUEParametersUpdateApiImpl.cpp  ProvidingAcknowledgementOfUEParametersUpdateApiImpl.h  (+58 more)
oai-cn5g-fed/component/oai-udm/src/api_server/model/: AccessAndMobilitySubscriptionData.cpp  AccessAndMobilitySubscriptionData.h  AccessNetworkId.cpp  AccessNetworkId.h  AccessTech.cpp  AccessTech.h  AccessType.cpp  AccessType.h  AcknowledgeInfo.cpp  AcknowledgeInfo.h  Ambr.cpp  Ambr.h  AmbrRm.cpp  AmbrRm.h  Amf3GppAccessRegistration.cpp  Amf3GppAccessRegistration.h  Amf3GppAccessRegistrationModification.cpp  Amf3GppAccessRegistrationModification.h  AmfDeregInfo.cpp  AmfDeregInfo.h  AmfNon3GppAccessRegistration.cpp  AmfNon3GppAccessRegistration.h  AmfNon3GppAccessRegistrationModification.cpp  Area.cpp  Area.h  Arp.h  (+298 more)
(+2219 files in other folders)
